# pyphoenix-project

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/dev/: sdd.md  srs.md
docs/examples/: array_example.py  attrs_demo.py  input_data_model_example.py  list_example.py  record_example.py  transient_example.py  variables_example.py
flopy4/: array.py  block.py  compound.py  model.py  package.py  simulation.py  typing.py
flopy4/ispec/: exg_gwfgwf.py  gwe_dis.py  gwe_disu.py  gwe_disv.py  gwe_model.py  gwf_chd.py  gwf_dis.py  gwf_disu.py  gwf_disv.py  gwf_ic.py  gwf_model.py  gwf_npf.py  gwt_dis.py  gwt_disu.py  gwt_disv.py  gwt_model.py  prt_dis.py  prt_disv.py  prt_model.py  prt_prp.py
flopy4/mf6/io/: transformer.py
flopy4/xarray_jinja/: filters.py
flopy4/xarray_jinja/templates/: disu_template.disu.jinja
spec/: make_ispec.py  mf6pkg.template
spec/toml/: gwe-disu.toml  gwe-disv.toml  gwf-chd.toml  gwf-disu.toml  gwf-disv.toml  gwf-npf.toml  gwt-disu.toml  gwt-disv.toml  prt-disv.toml  prt-prp.toml
test/: pytest.ini  test_array.py  test_cattrs.py  test_dask_xarray.py  test_dfn.py  test_lark.py  test_list.py  test_networkx_xarray.py  test_package.py  test_sim.py  test_xarray_io.py  test_xarray_jinja.py
test/attrs/: test_gwfic.py  test_gwfoc.py
test/data/test_gwf_chd01/: chd01.tdis  gwf_chd01.chd  gwf_chd01.dis  gwf_chd01.ic  gwf_chd01.ims  gwf_chd01.nam  gwf_chd01.npf  gwf_chd01.oc  mfsim.nam
test/data/test_mf6model_0-disu01a_0/: disu01a.chd  disu01a.disu  disu01a.ic  disu01a.ims  disu01a.nam  disu01a.npf  disu01a.tdis  mfsim.nam
test/data/test_mf6model_0-disv01a_0/: disv01a.chd  disv01a.disv  disv01a.ic  disv01a.ims  disv01a.nam  disv01a.npf  disv01a.tdis  mfsim.nam
