[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flopy4"
description = "Development project to reimplement MF6 support for FloPy"
authors = [
    { name = "Joe Hughes", email = "jdhughes@usgs.gov" },
    { name = "Chris Langevin", email = "langevin@usgs.gov" },
    { name = "Josh Larsen", email = "jlarsen@usgs.gov" },
    { name = "Michael Reno", email = "mreno@ucar.edu" },
    { name = "Wes Bonelli", email = "wbonelli@ucar.edu" },
    { name = "Marnix Kraus", email = "Marnix.Kraus@deltares.nl" },
]
maintainers = [
    { name = "Joe Hughes", email = "jdhughes@usgs.gov" },
    { name = "Chris Langevin", email = "langevin@usgs.gov" },
    { name = "Josh Larsen", email = "jlarsen@usgs.gov" },
    { name = "Michael Reno", email = "mreno@ucar.edu" },
    { name = "Wes Bonelli", email = "wbonelli@ucar.edu" },
]
keywords = ["MODFLOW", "groundwater", "hydrogeology"]
license = { text = "CC0" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "attrs",                   # todo: bounds?
    "cattrs",                  # todo: bounds?
    "flopy>=3.7.0",
    "Jinja2>=3.0",
    "lark",                    # todo: bounds?
    "numpy>=1.20.3",
    "pandas>=2.0.0",
    "toml>=0.10",
    "networkx>=3.4.2,<4",
    "xarray>=2024.11.0,<2025",
    "scipy>=1.14.1,<2",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["flopy4[lint,test,build]"]
lint = ["ruff"]
test = [
    "flopy4[lint]",
    "coverage",
    "GitPython",
    "interegular",
    "jupyter",
    "jupytext",
    "modflow-devtools",
    "mypy",
    "pooch>=1.8",
    "pytest!=8.1.0",
    "pytest-dotenv",
    "pytest-xdist",
]
build = ["build", "twine"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "flopy4.version.__version__" }

[tool.setuptools.packages.find]
include = ["flopy4", "flopy4.*"]

[tool.setuptools.package-data]
"flopy4.dfns" = ["dfns/*.dfn"]
"flopy4.toml" = ["dfns/toml/*.toml"]

[tool.ruff]
line-length = 79
target-version = "py310"
include = ["pyproject.toml", "flopy4/**/*.py", "test/**/*.py", "docs/**/*.py"]
extend-include = ["docs/**/*.ipynb"]
exclude = ["flopy4/ispec/*.py"]

[tool.ruff.lint]
select = [
    "D409", # pydocstyle - section-underline-matches-section-length
    "E",    # pycodestyle error
    "F",    # Pyflakes
    "I001", # isort - unsorted-imports
]
ignore = [
    "F821", # undefined name TODO FIXME
    "E722", # do not use bare `except`
    "E741", # ambiguous variable name
]

[project.entry-points.flopy4]
plot = "flopy4.singledispatch.plot_int"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.system-requirements]
macos = "12.0"

[tool.pixi.pypi-dependencies]
flopy4 = { path = ".", editable = true }

[tool.pixi.feature.py310.dependencies]
python = "3.10"

[tool.pixi.feature.py311.dependencies]
python = "3.11"

[tool.pixi.feature.py312.dependencies]
python = "3.12"

[tool.pixi.feature.py313.dependencies]
python = "3.13"

[tool.pixi.environments]
test310 = { features = ["py310", "test"], solve-group = "py310" }
test311 = { features = ["py311", "test"], solve-group = "py311" }
test312 = { features = ["py312", "test"], solve-group = "py312" }
test313 = { features = ["py313", "test"], solve-group = "py313" }
dev = { features = ["py313", "test", "lint", "build"], solve-group = "py313" }

[tool.pixi.feature.build.tasks]
build = { cmd = "python -m build" }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest -v -n auto" }

[tool.pixi.feature.lint.tasks]
lint = { cmd = "ruff check ." }
